# c-pro

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: STEP-01-logger.md  STEP-02-mem-basics.md  STEP-03-file-organization.md  STEP-04-ci.md
include/cpro/: logger.h  mem.h
src/logger/: logger.c  test_logger.c
src/logger/inc/: logger.h
src/mem/: mem.c  test_mem.c
src/mem/inc/: mem.h
